[build-system]
requires = ['setuptools', 'setuptools-scm']
build-backend = 'setuptools.build_meta'

[project]
name = 'CryptoDataHub'
version = '1.0.1'
description = 'Repository of cryptography-related data'
authors = [
    {name = 'Szilárd Pfeiffer', email = 'coroner@pfeifferszilard.hu'}
]
maintainers = [
    {name = 'Szilárd Pfeiffer', email = 'coroner@pfeifferszilard.hu'}
]
classifiers=[
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Framework :: tox',
    'Intended Audience :: Information Technology',
    'Intended Audience :: Science/Research',
    'Intended Audience :: System Administrators',
    'License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)',
    'Natural Language :: English',
    'Operating System :: MacOS',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Programming Language :: Python :: Implementation :: CPython',
    'Programming Language :: Python :: Implementation :: PyPy',
    'Programming Language :: Python',
    'Topic :: Internet',
    'Topic :: Security',
    'Topic :: Security :: Cryptography',
    'Topic :: Software Development :: Libraries :: Python Modules',
]

keywords=['ssl', 'tls', 'ssh', 'dns', 'dnssec']
readme = {file = 'README.rst', content-type = 'text/x-rst'}
license = {text = 'MPL-2.0'}

dependencies = [
    'asn1crypto',
    'attrs',
    'python-dateutil',
    'urllib3',
]

[project.optional-dependencies]
tests = [
    'pyfakefs',
    'beautifulsoup4',
]
docs = [
    'sphinx',
    'sphinx-sitemap',
]

[project.urls]
Homepage = 'https://gitlab.com/coroner/cryptodatahub'
Changelog = 'https://cryptodatahub.readthedocs.io/en/latest/changelog'
Documentation = 'https://cryptodatahub.readthedocs.io/en/latest/'
Issues = 'https://gitlab.com/coroner/cryptodatahub/-/issues'
Source = 'https://gitlab.com/coroner/cryptodatahub'

[tool.variables]
technical_name = 'cryptodatahub'

[tool.setuptools]
license-files = ['LICENSE.txt']

[tool.setuptools.packages.find]
exclude = ['updaters']

[tool.setuptools.package-data]
cryptodatahub = [
    '*/*.json'
]

[tool.tox]
envlist = [
    'pep8',
    'pylint',
    'pypy3',
    'py39',
    'py310',
    'py311',
    'py312',
    'py313',
    'py314',
    'pythonrc',
]

[tool.tox.env_run_base]
deps = ['coverage', '.[tests]']
commands = [
    ['coverage', 'erase'],
    ['coverage', 'run', '-m', 'unittest', 'discover', '-v'],
    ['coverage', 'report']
]

[tool.tox.env.pep8]
deps = ['flake8']
commands = [['flake8', 'cryptodatahub', 'docs', 'updaters', 'test']]

[tool.tox.env.pylint]
deps = ['pylint', '.[tests]']
commands = [['pylint', '--rcfile', '.pylintrc', 'cryptodatahub', 'docs', 'updaters', 'test']]
