[build-system]
requires = ['setuptools', 'setuptools-scm']
build-backend = 'setuptools.build_meta'

[project]
name = 'CryptoDataHub'
version = '1.4.0'
description = 'Repository of cryptography-related data'
authors = [
    {name = 'Szilárd Pfeiffer', email = 'coroner@pfeifferszilard.hu'}
]
maintainers = [
    {name = 'Szilárd Pfeiffer', email = 'coroner@pfeifferszilard.hu'}
]
classifiers=[
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Intended Audience :: Information Technology',
    'Intended Audience :: Science/Research',
    'Intended Audience :: System Administrators',
    'Natural Language :: English',
    'Operating System :: MacOS',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Programming Language :: Python :: Implementation :: CPython',
    'Programming Language :: Python :: Implementation :: PyPy',
    'Programming Language :: Python',
    'Topic :: Internet',
    'Topic :: Security',
    'Topic :: Security :: Cryptography',
    'Topic :: Software Development :: Libraries :: Python Modules',
]

keywords=['ssl', 'tls', 'ssh', 'dns', 'dnssec', 'ike']
readme = {file = 'README.rst', content-type = 'text/x-rst'}
license = {text = 'MPL-2.0'}

dependencies = [
    'asn1crypto',
    'attrs',
    'python-dateutil',
    'urllib3',
]

[project.optional-dependencies]
tests = [
    'pyfakefs',
    'beautifulsoup4',
    'coverage',
]
docs = [
    'sphinx',
    'sphinx-sitemap',
    'docutils',
]

[project.scripts]
update-ct-log = 'updaters.ct_log:main'
update-trust-stores = 'updaters.trust_stores:main'

[project.urls]
Homepage = 'https://gitlab.com/coroner/cryptodatahub'
Changelog = 'https://cryptodatahub.readthedocs.io/en/latest/changelog'
Documentation = 'https://cryptodatahub.readthedocs.io/en/latest/'
Issues = 'https://gitlab.com/coroner/cryptodatahub/-/issues'
Source = 'https://gitlab.com/coroner/cryptodatahub'

[tool.variables]
technical_name = 'cryptodatahub'

[tool.setuptools.packages.find]
include = ['cryptodatahub*', 'updaters*']

[tool.setuptools.package-data]
cryptodatahub = [
    '*/*.json'
]

[tool.ruff]
line-length = 120
target-version = 'py39'

[tool.ruff.lint]
select = ['E', 'F', 'W', 'UP', 'B']
